<resources>
    <string name="app_name">NutriSee</string>
    <string name="try_again">Try Again</string>
    <string name="hint_email">example@example.com</string>
    <string name="error_email">This email doesn\'t exist</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="hint_password">********</string>
    <string name="error_login">Your email format is invalid</string>
    <string name="error_password">Password invalid</string>
    <string name="hint_username">Your Username</string>
    <string name="error_username">This username is invalid</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="failed_to_start_camera">Failed to start Camera</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="flash">Flash</string>
    <string name="photo">Photo</string>
    <string name="profile_name">Nutri See</string>
    <string name="profile_email">nutrisee@nutrisee.health</string>
    <string name="log_out">LOG OUT</string>
    <string name="profile_name_feed">This is profile name</string>
    <string name="caption_feed">This is feeds caption</string>
    <string name="date_feed">This/is/date/format</string>
    <string name="title_app">NutriSee</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="settings">SETTING</string>
    <string name="profile_name_null">User</string>
    <string name="archive">Archive</string>
    <string name="warning">WARNING</string>
    <string name="error_flash">Flash is not supported on this version</string>
    <string name="fill_blanks">Please fill in the blanks</string>
    <string name="loading">Loading</string>
    <string name="result">Result</string>
    <string name="serving">serving</string>
    <string name="serving_placeholder">1</string>
    <string name="close">CLOSE</string>
    <string name="change_language">Change Language</string>
    <string name="template_lang">EN</string>
    <string name="welcome">Welcome to</string>
    <string name="logout_confirmation">Are you sure want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calory">calory</string>
    <string name="cant_less">Can\'t be less than 0</string>
    <string name="success">Success</string>
    <string name="predict_result">Predict Result</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="join_us">Join Us!</string>
    <string name="have_u_eaten">Have you eaten yet?</string>
    <string name="copyright_nutrisee">©NutriSee</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="welcome_signup">Welcome to Nutrisee,</string>

    <string-array name="feeds_person">
        <item>Faishal Afif</item>
        <item>Afif</item>
        <item>Apep</item>
        <item>Apeep</item>
        <item>Sal</item>
        <item>Apip</item>
        <item>Afif Faishal</item>
    </string-array>

    <string-array name="feeds_caption">
        <item>Rendang daging sapi</item>
        <item>Telur telur telur</item>
        <item>Ayam goreng flash sale dua singgit</item>
        <item>Sambalado telur</item>
        <item>Kaya akan omega 3</item>
        <item>Nasi diet nih bos</item>
        <item>aku vegan dan aku bangga . .</item>
    </string-array>

    <integer-array name="feeds_photo">
        <item>@drawable/rendang</item>
        <item>@drawable/telur</item>
        <item>@drawable/ayam_goreng</item>
        <item>@drawable/telur_balado</item>
        <item>@drawable/ikan_bakar</item>
        <item>@drawable/nasi_merah</item>
        <item>@drawable/daun_singkong</item>
    </integer-array>

    <integer-array name="data_photo">
        <item>@drawable/person1</item>
        <item>@drawable/person2</item>
        <item>@drawable/person3</item>
        <item>@drawable/person2</item>
        <item>@drawable/person1</item>
        <item>@drawable/person2</item>
        <item>@drawable/person3</item>
        <item>@drawable/person1</item>
        <item>@drawable/person2</item>
    </integer-array>

    <string-array name="date">
        <item>Selasa, 14 Juni 2023</item>
        <item>Selasa, 13 Juni 2023</item>
        <item>Selasa, 13 Juni 2023</item>
        <item>Selasa, 12 Juni 2023</item>
        <item>Selasa, 10 Juni 2023</item>
        <item>Selasa, 10 Juni 2023</item>
        <item>Selasa, 9 Juni 2023</item>
        <item>Selasa, 8 Juni 2023</item>
        <item>Selasa, 8 Juni 2023</item>
        <item>Selasa, 7 Juni 2023</item>
    </string-array>
</resources>