<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_feed_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="55dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="29dp"
        android:text="@string/profile_name_null"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_feed_profile" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="29dp"
        android:gravity="center"
        android:text="@string/profile_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:backgroundTint="@color/grey"
        android:drawableEnd="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@id/btn_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/log_out"
        android:textStyle="bold"
        android:drawableEnd="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>