<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:src="@drawable/logo"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"/>

    <com.example.nutrisee.custom.EditTextEmail
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button"
        android:hint="@string/hint_email"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"/>

    <com.example.nutrisee.custom.EditTextPassword
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/button"
        android:hint="@string/hint_password"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/sign_in"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dont_have_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/dont_have_account"
        android:paddingTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toEndOf="@+id/tv_dont_have_acct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>