<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CameraActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown500"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_back_24"
            android:background="@color/brown500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <TextView
        android:id="@+id/tv_serving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_result_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/serving"/>

    <TextView
        android:id="@+id/number_serving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="@id/tv_serving"
        app:layout_constraintBottom_toBottomOf="@id/tv_serving"
        app:layout_constraintEnd_toStartOf="@id/tv_serving"
        android:text="@string/serving_placeholder"/>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/tv_serving"
        app:layout_constraintTop_toTopOf="@id/tv_serving"
        app:layout_constraintBottom_toBottomOf="@id/tv_serving"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/baseline_remove_24"
        app:layout_constraintEnd_toStartOf="@id/number_serving"
        app:layout_constraintTop_toTopOf="@id/tv_serving"
        app:layout_constraintBottom_toBottomOf="@id/tv_serving"/>

    <TextView
        android:id="@+id/tv_result_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/previewView"
        app:layout_constraintBottom_toTopOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_result_kalori"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result_name"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/close"
        android:backgroundTint="@color/brown500"
        android:textColor="@color/brown"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_result_name"
        app:layout_constraintEnd_toEndOf="@id/tv_result_name"
        app:layout_constraintTop_toTopOf="@id/tv_result_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_result_name"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>